# formula1

f1-ml-model/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
f1-ml-model/models/: f1_race_model.joblib
f1-ml-model/notebooks/: explore_api.ipynb  model_load.ipynb
