[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "f1_ml_project"
version = "0.0.1"
description = "Learning project for Formula 1 machine learning using Python and F1 APIs"
authors = [
  { name = "Parth Rawat" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11 , < 3.14"


[tool.ruff]
line-length = 99
src = ["f1_ml_project"]
include = ["pyproject.toml", "f1_ml_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["f1_ml_project"]
force-sort-within-sections = true

